--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         console.log('Image URL: ' + profile.getImageUrl());
         console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
         var id_token = googleUser.getAuthResponse().id_token;
-        // console.log(id_token);
+        console.log(id_token);
 
         var xhr = new XMLHttpRequest();
         xhr.open('POST', '/google');
